--- a/src/content_agent/config/tasks.yaml
+++ b/src/content_agent/config/tasks.yaml
@@ -26,16 +26,21 @@ consolidation_task:
 
 content_creation_task:
   description: >
-    Create engaging social media content based on the consolidated research.
-    Content should be between 150-200 words, optimized for social media engagement.
-    Include 3-5 reference links to support the information presented.
-
+    Turn the research into a captivating social media post that makes people stop scrolling. 
+    Write like you're talking to a friend about something exciting you just discovered.
+    Ask a thought-provoking question that makes readers reflect on how this affects them personally.
+    End with a clear invitation that makes them want to learn more or take action.
+    Keep it conversational, relatable, and avoid technical jargon when possible.
+    Make sure it's between 150-200 words and include 3-5 reference links to back up your points.
+    
   expected_output: >
     A social media post that includes:
-    - 150-200 word engaging content
-    - 3-5 relevant reference links
-    - Attention-grabbing opening
-    - Clear call-to-action or thought-provoking conclusion
+    - 150-200 word engaging content written in a conversational, human tone
+    - 3-5 relevant reference links organized neatly at the bottom
+    - An attention-grabbing opening that creates curiosity
+    - A personal question that helps readers connect with the topic
+    - A clear call-to-action that feels natural, not forced
     - 3 Hashtags related to the {topic} 
-    -Output shouldn't have any emojis
+    - Output shouldn't have any emojis
+    - Content should feel like it was written by a human, not AI
   agent: content_creation_agent
